Add FastAPI API server and macOS launcher

--- a/ondevice-ai/Makefile
+++ b/ondevice-ai/Makefile
@@ -1,18 +1,31 @@
-.PHONY: proto run daemon test cli-index cli-query
+.PHONY: proto run daemon test cli-index cli-query bundle-models package package-with-models clean-artifacts
 proto:
-	python -m grpc_tools.protoc -I=proto --python_out=core --grpc_python_out=core proto/assistant.proto
+	python3 -m grpc_tools.protoc -I=proto --python_out=core --grpc_python_out=core proto/assistant.proto
 
 run:
-	python automation_daemon.py
+	python3 automation_daemon.py
 
 daemon:
-	python automation_daemon.py $(ARGS)
+	python3 automation_daemon.py $(ARGS)
 
 cli-index:
-	python -m cli.index index "$(text)"
+	python3 -m cli.index index "$(text)"
 
 cli-query:
-	python -m cli.index query "$(text)"
+	python3 -m cli.index query "$(text)"
+
+bundle-models:
+	python3 -m tools.fetch_models
+
+package:
+	pyinstaller packaging/OnDeviceAI.spec --noconfirm
+
+package-with-models:
+	$(MAKE) bundle-models
+	$(MAKE) package
 
 test:
-	pytest -q
+	python3 -m pytest -q
+
+clean-artifacts:
+	rm -rf build dist OnDeviceAI.spec __pycache__ *.egg-info .pytest_cache
